update to all files: styles adjusted, content udpated, functionality has full overhaul, currently start button begins interval timer that container game sequence for each question. next steps: updating questionSequence function to break at correct conditions, triggering post answer text and also checking answer

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,11 +11,6 @@
 body {
   font-family:'Runcible', sans-serif;
   line-height: 1.5 em;
-  /* background: url(../assets/shining-carpet-BG-1.png) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover; */
   background-color: lightgoldenrodyellow;
   margin: 10px;
   
@@ -30,82 +25,67 @@ body {
   justify-content: space-around;
 }
 
+  #title-container {
+    text-align: center;
+    margin: 2%;
+  }
 
-#title-container {
-  text-align: center;
-  margin: 3%;
-}
+    #game-title {
+      width:100%;
+      min-width: 300px;
+      height: auto;
+    }
 
-#game-title {
-  width:100%;
-  min-width: 300px;
-  height: auto;
-}
+  #game-content-1 {
+    font-size: 25px;
+    text-align: center;
+    margin-bottom: 3%;
+  }
+  
+  #game-content-2 {
+    font-size: 30px;
+    text-align: center;
+  }
 
-#game-content-1 {
-  font-size: 25px;
-  text-align: center
-}
+    #hotel-key-div{
+      padding: 6%;
+      display:flex;
+      flex-direction: row;
+      align-content: center;
+    }
 
-#game-content-2 {
-  font-size: 30px;
-  text-align: center;
-}
+    #start-btn {
+      height: 340px;
+      width: 340px ;
+    }
 
-.title-word {
-  font-size: 140%;
-  color: rgb(173, 0, 0);
-}
+    .game-q {
+      margin: 3% 3% 7% 3%;
+      font-size: 45px;
+      line-height: 1.3em;
+    }
 
-#hotel-key-div{
-  padding: 6%;
-  display:flex;
-  flex-direction: row;
-  align-content: center;
-}
+    .game-answer-single {
+      color: rgb(173, 0, 0);
+      margin: 2%;
+      font-size: 40px;
+      line-height: 1.1em;
+    }
 
-#start-btn {
-  height: 340px;
-  width: 340px ;
-}
+    .post-answer {
+      margin: 5% 3% 3% 3%;
+      font-size: 45px;
+      line-height: 1.3em;
+    }
 
-#click-text {
-  text-align: center;
-  min-width: 100px;
-  margin: 100px 0 0 20px;
-  font-size: 20px;
-}
+  #timer-container {
+    position:relative;
+    margin-top: 8%;
+    align-self:flex-end;
+  }
 
-#question-text {
-  max-width:400px;
-  font-size: 20px;
-}
-
-.game-q {
-  margin: 5% 3% 3% 3%;
-  font-size: 45px;
-  line-height: 1.3em;
-}
-
-.post-answer {
-  margin: 5% 3% 3% 3%;
-  font-size: 45px;
-  line-height: 1.3em;
-}
-
-.game-answers {
-  color: rgb(173, 0, 0);
-  margin: 5%;
-  font-size: 40px;
-  line-height: 1.3em;
-}
-
-.game-answer-single {
-  margin: 2%;
-}
 
 /*///////  EFFECTS  ///////*/
-
 .zoom {
     transition: transform .15s; /* Animation */
 }
